--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -4,6 +4,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url("/fundo-home.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 .linkETA {
